tests/paczka1/fuzzy1/22289789.err
Error in line 3: uvW0E1pWTYA A459 9,5
Error in line 5: uvW0E1pWTYA S792 53,7
Error in line 7: uvW0E1pWTYA A459 72,3
Error in line 10: OkP S792 95,8
Error in line 20: rKqHJJpf A459 16,33
Error in line 19: rKqHJJpf S792 15,9
Error in line 21: rKqHJJpf A459 9,5
Error in line 23: OkP A355 99,1
Error in line 32: rKqHJJpf A60 31,4
